numberous changes over a period of weeks after getting suggestions from Rosner and the readers committee

--- a/SnowmassStyle/Computing/Computing-executiveSummary.tex
+++ b/SnowmassStyle/Computing/Computing-executiveSummary.tex
@@ -3,11 +3,11 @@
 \section{Introduction}
 
 Computing has become a major component of all particle physics experiments
-and in many areas of theoretical particle physics. 
-Progress in HEP experiment and theory will require significantly more
+and many areas of theoretical particle physics. 
+Progress in particle physics experiment and theory will require significantly more
 computing, software development, storage, and networking, with different
 projects stretching future capabilities in different ways.  However, there
-are many common needs among different areas in HEP, so more
+are many common needs among different areas in particle physics, so more
 community planning is advised to increase efficiency.
 Careful and continuing review of the topics we studied, 
 {\it i.e.}, user needs and capabilities of
@@ -16,26 +16,28 @@ community has been a great source of computing innovation and expertise.
 We must continue to share our expertise within our field and beyond.
 We should find more opportunties to learn from others as well.
 
-One difference between Computing and other enabling technologies is that there is
-a very vibrant global computer industry that is constantly creating new products
+One difference between computing and other enabling technologies is that there is
+a vibrant global computer industry that is constantly creating new products
 and improving current ones.  Although some of the computing equipment that we deploy
-is customized, such as application specific integrated circuits, the vast
+is customized, such as application-specific integrated circuits, the vast
 majority of it is widely available.  We are not building a bespoke detector with
 a multi-decade lifetime.  For the most part, we are purchasing commercially available
 computing equipment that will last less than ten years.  However, we need to
 carefully examine our computing needs and the available technology
-to ensure that our systems are configured to cost effectively meet those needs.
-In contrast to the short lifetime of the hardware is a longer lifetime for the
-software that is developed for both experiment and theory.  Of course, the software
-is undergoing continual development and optimization.  Thus, our study group
+to ensure that our systems are configured to cost-effectively meet those needs.
+In contrast to the short lifetime of the hardware, the
+software that is developed for both experiment and theory has a longer
+lifetime. Still, the software
+is undergoing continual development and optimization.   Our study group
 considered the hardware and software needs of particle physics for the next
-ten to twenty years, and recommends not a grand project or two, but a continuing
+ten to twenty years, and recommends, not a grand project or two, but a continuing
 process of monitoring and supporting the hardware and software needs of the field
 in order to optimize the contribution of computing to scientific output.
 
 The Computing 
 subgroups covered user needs and infrastructure.
-Experimental user needs subgroups included the Cosmic, Energy and Intensity Frontiers.
+Experimental user needs subgroups included those for
+the Cosmic, Energy and Intensity Frontiers.
 Theory subgroups covered accelerator science,
 astrophysics and cosmology, lattice field theory, and perturbative QCD.
 Four infrastructure groups predicted computing trends and
@@ -45,8 +47,8 @@ infrastructures; networking; software development, personnel, and training; and
 data management and storage. 
 The Computing
 subgroups engaged with the other frontiers to learn of
-their plans and estimate their computing needs.  The infrastructure groups
-engaged with vendors, computer users, providers and technical experts. 
+their plans and to estimate their computing needs.  The infrastructure groups
+engaged with vendors, computer users, providers, and technical experts. 
 
 The experimental program mainly relies on distributed
 high-throughput computing (HTC). 
@@ -74,8 +76,8 @@ needs for data-intensive computing tasks.
 Another pressing issue facing both HTC and HPC communities is that
 processor speeds are no longer increasing, as they were for
 at least two decades. Instead, new chips provide multiple
-cores. Thus, we cannot rely on new hardware to run serial codes faster, and
-we must therefore parallelize codes to increase application performance. 
+cores. Thus, we cannot rely on new hardware to run serial codes faster.
+We must therefore parallelize codes to increase application performance. 
 Today's computer servers contain one or more multi-core chips.  Currently,
 these chips  have up to 10 (Intel) or 16 (AMD) cores. 
 For additional performance the server may contain
@@ -90,7 +92,7 @@ scaling of disk capacity and throughput is of
 significant concern, as per-unit capacities will no longer increase as rapidly
 as they have in the past.
 
-These changes in chip technology and high performance system architectures
+These changes in chip technology and high-performance system architectures
 require us to develop parallel algorithms and codes, and to train personnel
 to develop, support and maintain them. Different subgroups are at different
 stages in their efforts to port to these new technologies. 
@@ -125,11 +127,11 @@ for non-academic jobs, but it is also important that there be career paths
 within particle physics, including tenure-track jobs, for those working at
 the forefront of computation.
 
-Subsequent sections of the chapter summarize the finding of each of our subgroups.
-We start with the needs of the Cosmic, Energy and Intensity Froniers.  We then
-turn to the needs of theoretical areas: Accelerator Science, Lattice Field Theory,
-and Perturbative QCD.  Theoretical work in Astrophysics and Cosmology is included
-in the Cosmic Frontier section.  Our last section briefly summarizes our conclusions.
-Additional details appear in individual sections and the in the full subgroup
+Subsequent sections of this chapter summarize the finding of each of our subgroups.
+We start with the needs of the Energy, Intensity, and Cosmic Froniers.  We then
+turn to the needs of theoretical areas: accelerator science, lattice field theory,
+and perturbative QCD.  Theoretical work in astrophysics and cosmology is included
+in the Cosmic Frontier section.  
+Our last section briefly summarizes our conclusions.
+Additional details appear in individual sections and in the full subgroup
 reports.
-
