--- a/SnowmassStyle/Computing/I4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I4-executiveSummary.tex
@@ -1,10 +1,11 @@
-\section{Software Development, Staffing and Training}
+\section{Software development, staffing, and training}
 
-Success of HEP science will continue to depend critically on computing.
-Managing the human activities (software development and management,
+The success of particle physics will continue to critically depend on computing.
+Managing the human activities accociate with computing
+(software development and management,
 training and staffing) is an important part of that.  
 Based upon our own experiences, and from
-discussions with members of the HEP community,
+discussions with members of the particle physics community,
 we have identified the following main goals for the next decade in the area
 of software, staffing and training:
 
@@ -12,25 +13,27 @@ of software, staffing and training:
 \item Maximize the scientific productivity of our community
 in an era of reduced resources, by using
 software development strategies and staffing models that will result in products
-that are useful for the wider HEP community.
+that are useful for the entire particle physics community.
 \item Respond to the evolving technology market, especially
 with respect to computer processors, by
 developing and evolving software that will perform with optimal efficiency
 in future computing systems.
 \item Insure that our developers and users will have the
 training needed to create, maintain, and use the increasingly complex software
-environments and computing systems that will be part of future HEP projects.
+environments and computing systems that will be part of future 
+particle physics projects.
 \end{itemize}
 
-Some specific recommendations we feel will help achieve these goals are:
+Some specific recommendations we feel will help achieve these goals are detailed
+below.
 
 \begin{itemize}
     \item Software management, toolkits and reuse
     \begin{itemize}
-        \item Continue to support established toolkits (Geant4, ROOT, ...)
-        \item Encourage the creation of new toolkits from existing successful common software (generators, tracking, ...)
+        \item Continue to support established toolkits (such as Geant4, ROOT)
+        \item Encourage the creation of new toolkits from existing successful common software (such as those for generators, tracking) 
         \item  Allow flexible funding of software experts to facilitate transfer of software and sharing of technical expertise between projects
-        \item Facilitate code sharing through open-source licensing and use of publicly-readable repositories.
+        \item Facilitate code sharing through open-source licensing and use of publicly-readable repositories
         \item Consolidate and standardize software management tools to ease
 migration of people from one project to another
     \end{itemize}
@@ -39,7 +42,7 @@ migration of people from one project to another
     \begin{itemize}
         \item Invest in software needed to adapt to the evolution of computing processors, both as basic R\&D into appropriate
 techniques and as re-engineering ``upgrades''
-        \item Designe new software and reengineer existing software to expose parallelism at multiple levels
+        \item Design new software and reengineer existing software to expose parallelism at multiple levels
         \item Develop flexible software architectures that can efficiently exploit a variety of possible future hardware options
     \end{itemize}    
 
@@ -52,7 +55,8 @@ techniques and as re-engineering ``upgrades''
 
     \item Training
     \begin{itemize}
-        \item Use certification to document expertise and encourage learning new skills
+        \item Use certification to document expertise and encourage the learning of
+new skills
         \item Encourage training in software and computing as a continuing physics activity
         \item Use mentors to spread scientific software development standards
         \item Involve computing professionals in the training of scientific domain experts
