--- a/SnowmassStyle/Computing/I5-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I5-executiveSummary.tex
@@ -1,33 +1,34 @@
-\section{Storage and Data Management}
+\section{Storage and data management}
 
 
-The largest HEP experiments have developed, and are improving,
-functional distributed data and workflow management systems meeting
+The largest Energy Frontier experiments have developed, and are improving,
+functional distributed data and workflow management systems that meet
 their needs. These systems are expensive to develop and operate and
 are thus  rarely appropriate for smaller experiments.
 
-HEP currently benefits from, but can also be  constrained by, the
+Particle physics currently benefits from, but can also be  constrained by, the
 highly successful ROOT features supporting reading  and writing of
 persistent data. No other major scientific field uses  ROOT or appears
-interested in it. Major developments in persistency  technology will
+interested in it. Major developments in the technology for
+dealing with persistent data will
 be required to take advantage of storage hardware on the  timescale of
 LHC Run 3.
 
-HEP should maintain and promote a vision of the future  in which fully
+Particle physics should maintain and promote a vision of the future  in which fully
 functional and low-operational-cost distributed computing and
 persistency management is supported by software that is widely used in
 data-intensive science.  To this end, developments in industry and the
-wider  science community should be monitored actively. HEP should work
+wider  science community should be monitored actively. Particle physics should work
 with the wider  science and computer science community to export and
-adapt HEP technologies and  vice-versa. In distributed computing, HEP
+adapt particle physics technologies and  vice-versa. In distributed computing, particle physics
 should organize itself to significantly  reduce the number of diverse
 approaches and share the ideas and  software developed
 in the largest experiments with other activities where they are needed.
 
 Rotating disk storage will suffer a marked slowdown in the  evolution
-of capacity/cost.  This may be the largest perturbation of HEP
+of capacity/cost.  This may be the largest perturbation of particle physics
 computing  models that must attempt to optimize the roles of tape,
-rotating disk, solid-state  storage, networking and CPU.
+rotating disk, solid-state  storage, networking, and CPU.
 
 Many of the components required to support virtual data  already exist
 in the data and workflow management software of the largest
@@ -35,14 +36,14 @@ experiments.   The rigorous provenance recording required to support
 the virtual data concept would  also benefit data preservation.
 
 Computing model implementations should be flexible  enough to adapt to
-a wide range of relative costs of the key elements of HEP  computing.
+a wide range of relative costs of the key elements of particle physics  computing.
 In preparing for Run 3, the LHC program should seriously consider
 virtual data as a way to accommodate scenarios where storage for
 derived and  simulated data becomes relatively very costly.
 
 All experiments across all frontiers
 need  infrastructure that will allow scientists to store, catalog,
-access, and  reprocess datasets years after the original physics
+access, and  reprocess data sets years after the original physics
 results are produced.  The inherent similarity of the requirements
 across experiments and disciplines  calls for a coordinated investment
 in common infrastructure to enable easy  access and adoption of best
