--- a/SnowmassStyle/Computing/T3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T3-executiveSummary.tex
@@ -1,10 +1,10 @@
 %%%%% Magnetism Chapter  %%%%%%%%%%%%%%%%
  
-\section{Computing for Lattice Field Theory}
+\section{Computing for lattice field theory}
 \label{chap:LFT}
 
 
-One of the foremost goals of high-energy physics is to test the Standard Model
+One of the foremost goals of particle physics is to test the Standard Model
 of particle physics and to search for indications of new physics beyond. In
 many cases, interpretation of the experimental measurements requires a
 quantitative understanding of the nonperturbative dynamics of the quarks and
@@ -13,7 +13,7 @@ known method for \emph{ab initio} quantum chromodynamics (QCD) calculations
 with controlled uncertainties, by casting the fundamental equations of QCD
 into a form amenable to high-performance computing.  Thus, facilities for
 numerical lattice gauge theory are an essential theoretical adjunct to the
-experimental high-energy physics program.  Lattice QCD calculations now play
+experimental particle physics program.  Lattice QCD calculations now play
 an essential role in the search for new physics at the Intensity Frontier.
 They provide accurate results for many of the hadronic matrix elements needed
 to realize the potential of present experiments probing the physics of
@@ -35,13 +35,13 @@ five-year project extension, ``LQCD-ext~II.''  The Collaboration's ongoing
 software development and maintenance activities are supported by SciDAC-3
 grants.
 
-The report of the Lattice Field Theory working group summarizes the scientific
+The report of the lattice field theory working group summarizes the scientific
 goals of the U.S. lattice gauge theory community, presents the current and
 future computing needs and plans, and argues that continued support of the
 U.S. (and worldwide) lattice-QCD effort is essential to fully capitalize on
-the enormous investment in the high-energy physics experimental program.
+the enormous investment in the particle physics experimental program.
 
-\subsection{Lattice Field Theory Scientific Motivation}
+\subsection{Lattice field theory scientific motivation}
 
 Precision measurements at the Energy and Intensity Frontiers probe
 quantum-mechanical loop effects, and are therefore sensitive to physics at
@@ -96,7 +96,7 @@ Lattice field-theory calculations will also increasingly contribute to
 collider experiments at the LHC 14-TeV run by providing quantitative
 nonperturbative input for Higgs and other new-physics model building.
 
-\subsection{Lattice Field Theory Computing Resources}
+\subsection{Lattice field theory computing resources}
 
 Substantial high-performance computing resources are needed to calculate
 hadron masses and interactions with sufficient precision to test the Standard
@@ -118,8 +118,7 @@ processors and Infiniband networks, which have hundreds of nodes and
 thousands of cores.  A second type is accelerated commodity clusters, similar to the the
 standard clusters but with general purpose graphics processing units (GPUs) or
 Intel Many Integrated Core (MIC) accelerators installed in each server; these
-clusters have fewer nodes but typically hundreds of accelerators.  A third type is very
-large scale Cray supercomputers, consisting of thousands of AMD x86 processors
+clusters have fewer nodes but typically hundreds of accelerators.  A third type is very-large-scale Cray supercomputers, consisting of thousands of AMD x86 processors
 with a proprietary network, with the newest models also containing thousands
 of GPUs.  Finally, lattice theorists use very large scale IBM BlueGene supercomputers, consisting of
 hundreds of thousands of PowerPC cores interconnected on a proprietary
@@ -176,7 +175,7 @@ Year & ANL LCF & ORNL LCF & Dedicated Capacity Hardware \\[-0.75mm]
 Because of the variety of processor types and parallel architectures,
 efficient utilization of the above computing resources requires flexible and
 effective software.  Since 2004, DOE grants to USQCD during the three
-SciDAC~\cite{SciDAC} programs (2001-2006, 2006-2011, and 2011-2016) led to the
+SciDAC~\cite{SciDAC} programs (2001--2006, 2006--2011, and 2011--2016) led to the
 development of the USQCD software stack~\cite{SciDAC-software}.  This stack
 includes low-level communications and I/O application program interfaces
 (APIs) implemented via libraries ported to and optimized for each of the
@@ -233,7 +232,7 @@ postdocs and scientific staff to develop new lattice-gauge-theory code cannot
 be supported by grants to lab and university theory groups alone, but must be
 augmented through grant programs such as SciDAC.
 
-\subsection{Lattice Field Theory Summary}
+\subsection{Lattice field theory summary}
 
 
 Numerical lattice-QCD calculations are needed to interpret many upcoming
@@ -242,8 +241,8 @@ the Standard Model and new-physics searches.  Nonperturbative hadronic matrix
 elements and fundamental QCD parameters enter the Standard~Model predictions
 for many processes as diverse as rare kaon decays, Higgs branching fractions,
 and the muon anomalous magnetic moment.  Thus, facilities for numerical
-lattice gauge theory are an essential theoretical compliment to the
-experimental high-energy physics program.
+lattice gauge theory are an essential theoretical complement to the
+experimental particle physics program.
 
 The successful accomplishment of USQCD's scientific goals requires
 access to both capacity and capability machines, and hence support for both
