--- a/SnowmassStyle/Computing/T4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T4-executiveSummary.tex
@@ -1,11 +1,11 @@
-\section{Computing for Perturbative QCD}
+\section{Computing for perturbative QCD}
 \label{chap:PQCD}
 \subsection{Introduction}
 
 One of the main challenges facing the particle physics community to date
 is interpreting LHC measurements on the basis of accurate and
 robust theoretical predictions.  The discovery of a Higgs-like
-particle in Summer 2012~\cite{Aad:2012tfa,Chatrchyan:2012ufa} serves
+particle in summer 2012~\cite{Aad:2012tfa,Chatrchyan:2012ufa} serves
 as a remarkable example of the level of detail and accuracy that must
 be achieved in order to enable a
 discovery~\cite{Dittmaier:2011ti,Dittmaier:2012vm,Heinemeyer:2013tqa}.
@@ -54,10 +54,10 @@ format that is immediately useful to the experiments.
 
 \subsection{Results and recommendations}
 
-This workshop provided a framework for implementing higher order  
+This planning exercise provided an incentive for implementing higher-order  
 calculations in a standardized computing environment made available 
-by DOE at the National Energy Research Scientific Computing Center
-(NERSC).  Resource requirements were determined for the
+by DOE at 
+NERSC.  Resource requirements were determined for the
 calculation of important background and signal reactions at the
 LHC, including higher order QCD and EW effects. Prototypical results 
 are listed in Table~\ref{tab:summary} and have been summarized in a 
@@ -89,10 +89,10 @@ potential of parallel computing in accelerating scientific progress.
 At the same time, we expect growing demand for educating young researchers 
 in cutting-edge computing technology. It would be highly beneficial 
 to provide a series of topical schools and workshops related 
-to HPC in HEP. They may be co-organized with experiments to foster 
+to HPC in particle physics. They may be co-organized with experiments to foster 
 the creation of a knowledge base.
 
-Large-scale distributed computing in Grid environments 
+Large-scale distributed computing in grid environments 
 may become relevant for perturbative QCD applications 
 in the near future. This development will be accelerated if Computing Grids
 can also provide access to HPC facilities and clusters where parallel 
@@ -106,19 +106,19 @@ as well as conventional computing facilities.
 \begin{center}
   \begin{tabular}{ccc}
     \hline
-    Type of calculation & CPU hours per project & projects per year \\
+    Type of calculation & CPU hours per project & Projects per year \\
     \hline\hline
     NLO parton level & 50,000 - 600,000 & 10-12\\
     NNLO parton level & 50,000 - 1,000,000 & 5-6\\
     Event generation & 50,000 - 250,000 & 5-8\\
-    Matrix Element Method & $\sim$ 200,000 & 3-5\\
+    Matrix element method & $\sim$ 200,000 & 3-5\\
     Exclusive jet cross sections & $\sim$ 300,000 & 1-2\\
-    Parton Distributions & $\sim$ 50,000 & 5-6\\
+    Parton distributions & $\sim$ 50,000 & 5-6\\
     \hline
   \end{tabular}
 \end{center}
   \caption{Summary of computing requirements for typical projects
-    carried out by the US community~\cite{HPCWP}.
+    carried out by the U.S.~community~\cite{HPCWP}.
     \label{tab:summary}}
 \end{table}
 
