--- a/SnowmassStyle/Computing/wgreport.tex
+++ b/SnowmassStyle/Computing/wgreport.tex
@@ -11,7 +11,7 @@
 
 \input Computing/authorlist.tex
 \begin{center}
-Draft version: November 12, 2013
+Draft version: November 24, 2013
 \end{center}
 %Conveners are also listed separately in authorlist.tex
 
@@ -24,9 +24,10 @@ Draft version: November 12, 2013
 
 \input Computing/Computing-executiveSummary.tex
 
-\input Computing/E1-executiveSummary.tex
+% change of order requested by Rosner
 \input Computing/E2-executiveSummary.tex
 \input Computing/E3-executiveSummary.tex
+\input Computing/E1-executiveSummary.tex
 
 \input Computing/T1-executiveSummary.tex
 \input Computing/T3-executiveSummary.tex
