--- a/SnowmassStyle/Computing/bib.tex
+++ b/SnowmassStyle/Computing/bib.tex
@@ -8,28 +8,28 @@
 %%
   
 \bibitem{HS06}
-{\tt w3.hepix.org/benchmarks/doku.php/}.
+\url{w3.hepix.org/benchmarks/doku.php/}.
 
 \bibitem{USQCD_IF_whitepaper13}
 T.~Blum {\em et al.} [USQCD Collaboration],
 {\em Lattice QCD at the Intensity Frontier},
-{\tt www.usqcd.org/documents/13flavor.pdf} (2013).
+\url{www.usqcd.org/documents/13flavor.pdf} (2013).
 
 \bibitem{USQCD_EF_whitepaper13}
 T.~Applequist {\em et al.} [USQCD Collaboration],
 {\em Lattice Gauge Theories at the Energy Frontier},
-{\tt http://www.usqcd.org/documents/13BSM.pdf} (2013).
+\url{www.usqcd.org/documents/13BSM.pdf} (2013).
 
  \bibitem{MPI}
-{\tt http://www.mcs.anl.gov/research/projects/mpi/}.
+\url{www.mcs.anl.gov/research/projects/mpi/}.
 %% Official standard site is www.mpi-forum.org, but it seems to
 % not be operational.
 
 \bibitem{SciDAC}
-{\tt http://www.scidac.gov/} and {\tt http://outreach.scidac.gov/scidac-overview}.
+\url{www.scidac.gov/} and \url{outreach.scidac.gov/scidac-overview}.
   
 \bibitem{SciDAC-software}
-{\tt http://usqcd.jlab.org/usqcd-software/}.
+\url{usqcd.jlab.org/usqcd-software/}.
 
 
 %\cite{Aad:2012tfa}
@@ -78,11 +78,11 @@ T.~Applequist {\em et al.} [USQCD Collaboration],
 \bibitem{HPCWP}
 C.~Bauer {\it et al.},
 %``The computing needs of theoretical high energy physics at the Energy Frontier''
-{\tt http://snowmass2013.org/tiki-index.php?page=HEP+Theory+and+High-Performance-Computing}.
+\url{snowmass2013.org/tiki-index.php?page=HEP+Theory+and+High-Performance-Computing}.
 
 
 %\cite{DMZ}
 \bibitem{DMZ}
-{\tt  http://fasterdata.es.net/science-dmz/}.
+\url{fasterdata.es.net/science-dmz/}.
 
 \end{thebibliography}
