--- a/SnowmassStyle/CpF-E2/authorlist.tex
+++ b/SnowmassStyle/CpF-E2/authorlist.tex
@@ -4,7 +4,7 @@
 
 \begin{center}
 
-\begin{large} {\bf Conveners: I. Fisk, J. Shank} \end{large}
+\begin{large} {\bf Conveners: I. Fisk (Fermilab), J. Shank (Boston University)} \end{large}
 
 
 \end{center}
